# ros_class

./: README.md  cmake.txt
01. ros_install/: install_ros_kinetic.sh
01_install_ros/: install_ros_kinetic.sh
02_install_sphinx/: install_sphinx.sh  sphinx_bebop2.sh
03. takeoff_and_land/src/: takeoff_and_land_node.cpp
03_install_mysql/: Chinook_MySql.sql  Employee.sql  mysql_cnf.txt  rosmall.sql  task.txt
04. ctrl_linear_x/: package.xml
05.bebop_teleoperation/: CMakeLists.txt
05.bebop_teleoperation/src/: bebop_teleoperation_node.cpp
bebop_logger/: CMakeLists.txt
bebop_logger/src/: DroneInfo.cpp  DroneInfo.h  Logger.cpp  Logger.h  Status.cpp  Status.h  bebop_logger_node.cpp
ctrl_linear_x/: CMakeLists.txt
ctrl_linear_x/src/: ctrl_linear_x_node.cpp
get_aurco_pose/: CMakeLists.txt  package.xml
get_aurco_pose/src/: get_aruco_pose_node.cpp
ros_tutorial/: CMakeLists.txt
ros_tutorial/src/: publisher.cpp  subscriber.cpp
takeoff_and_land/: CMakeLists.txt
